# ChessTournaments

./: .gitignore  README.md  forminator-easter-tournament-2026-260416193422.csv  pyproject.toml
local-test-instance/: chess.db
local-test-instance/exports/: anonymous_leaderboard.csv
local-test-instance/exports/tournaments/championship-chess-eth-2/: leaderboard.csv
local-test-instance/rating/: members.csv  not_anonymous.txt
scripts/: check_mail.py
src/flaskr/: __init__.py  auth.py  core.py  db.py  mailer.py  rating_integration.py  schema.sql  web.py
src/flaskr/static/: admin.js  register.js  style.css
src/flaskr/templates/: admin_dashboard.html  admin_login.html  admin_round.html  admin_tournament.html  archive.html  base.html  global_player_history.html  leaderboard.html  player_history.html  public_empty.html  public_tournament.html  register.html
src/rating/: __init__.py  manager.py  utils.py
src/rating/databases/: __init__.py  database.py  game_database.py  player_database.py  tournament_database.py
src/rating/objects/: __init__.py  tournament.py
src/rating/rating/: __init__.py  polyrating_base.py  rating_system.py
src/rating/statistics/: __init__.py  stat_manager.py  statistics.py
tests/: test_app.py
